<resources>
    <string name="app_name">KitchenGo Router</string>
    <string name="main_title">KitchenGo Premium Router</string>
    <string name="pref_header_general">General</string>
    <string name="pref_general_title_name">Station ID</string>
    <string name="pref_general_router_backup_title">Work as backup</string>
    <string name="pref_general_router_sum_backup">Backup mode allows multiple routers.Input primary router in [My primary router].</string>
    <string name="pref_general_sum_router_enabled">Enable the router or not</string>
    <string name="pref_general_router_enabled">Enable the router</string>
    <string name="pref_general_data_source">Order source</string>
    <string-array name="pref_general_data_source_titles">
        <item>TCP/IP</item>
        <item>Remote folder</item>
    </string-array>
    <string name="pref_general_title_tcp_port">Data source POS IP port</string>
    <string name="pref_general_title_remote_folder">Data source remote folder</string>
    <string name="pref_general_title_notification_folder">Save notification file to folder</string>
    <string name="pref_router_database_title">Database settings</string>
    <string name="pref_router_relations_title">Stations relationship</string>
    <string name="pref_general_title_backup_port">IP Port for backup</string>
    <string name="pref_general_connection_station_ipport">Connect to KDS station IP port</string>
    <string name="pref_general_title_default_station">Default station that item it will go</string>
    <string name="pref_header_database">Items filter setting</string>
    <string name="pref_header_relations">Stations relationship</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_stations_relation">Stations Relations</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_retrieve_config">Retrieve configuration</string>
    <string name="menu_activity_settings">Settings</string>
    <string name="menu_activity_cleardb">Clear database</string>
    <string name="menu_activity_showip">Show my ip</string>
    <string name="menu_activity_stations">Show active stations</string>
    <string name="menu_activity_schedule">Schedule</string>
    <string name="menu_activity_clearlog">Clear log</string>
    <string name="confirm_remove_relations_expo">Expeditor station # will be removed from Expo column, are you sure you want to change this?</string>
    <string name="confirm_clear_db">Do you want to clear database?</string>
    <string name="save">Save</string>
    <string name="confirm_remove_category">Do you want to remove category: </string>
    <string name="confirm_remove_fooditem">Do you want to remove item: </string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="mirror">Mirror</string>
    <string name="backup">Bck</string>
    <string name="new_item">New item</string>
    <string name="new_category">New category</string>
    <string name="description">Description</string>
    <string name="delay">Delay/Prep(mins)</string>
    <string name="printable">Printable</string>
    <string name="add_new">New</string>
    <string name="preptime">Delay/Prep(mins)</string>
    <string name="delayprep">Delay(mins):</string>
    <string name="error_isnot_unique_id">The ID # used by others.Please change it.</string>
    <string name="error_id_out_range">Please input ID value between 0 and 99.</string>
    <string name="error_id_is_empty">Please input ID.</string>
    <string name="error_different_relations">The stations relation is different with others, please edit relations first.</string>
    <string name="error_match_mac">Please run it in LogicControls device.</string>
    <string name="find">Find</string>
    <string name="category">Category description</string>
    <string name="item">Item description</string>
    <string name="router_disabled">Router is currently disable, please enable the router if you want to use it.</string>
    <string name="router_disabled_warning">Router is currently disable, please enable it first.</string>
    <string name="error_relations_mirror_dead_loop">Stations # mirror function dead loop.</string>
    <string name="error_relations_backup_dead_loop">Stations # backup function dead loop.</string>
    <string name="network_lost">Network lost</string>
    <string name="network_restore">Network restore</string>
    <string name="remove">Remove</string>
    <string name="local">Local</string>
    <string name="ethernet">Network</string>
    <string name="internet">Internet file</string>
    <string name="down">Down</string>
    <string name="bg">BG</string>
    <string name="fg">FG</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear all</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="schedule_help">Click any time slot to add a schedule</string>
    <string name="event_help_for_description">Add description here</string>
    <string name="event_help_for_orderid">Add Order ID here</string>
    <string name="fill_description">Fill description before save</string>
    <string name="fill_order_id">Fill order id before save</string>
    <string name="pref_kds_password_enabled">Enable password when enter setting</string>
    <string name="pref_kds_password_text">Password</string>
    <string name="add_item">Add item</string>
    <string name="qty_increase">Qty +</string>
    <string name="qty_decrease">Qty -</string>
    <string name="qty">Qty</string>
    <string name="to_station">To stations</string>
    <string name="order_id">Order ID</string>
    <string name="duration_mins">Duration(mins)</string>
    <string name="start_time">Start time</string>
    <string name="week_day">Day</string>
    <string name="schedule">Schedule</string>
    <string name="clear_log">Clear</string>
    <string name="station">Station</string>
    <string name="screen">Screen</string>
    <string name="summary_translate">Summary translate</string>
    <string name="build_cards">Build cards</string>
    <string name="training_video">Training Video</string>
    <string name="local_file">Local File</string>
    <string name="ethernet_file">Ethernet File</string>
    <string name="internet_file">Internet File</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="menu_schedule_add">Add new schedule</string>
    <string name="menu_schedule_edit">Edit</string>
    <string name="menu_schedule_clear_all">Clear all</string>
    <string name="menu_schedule_remove">Remove</string>
    <string name="new_schedule">New schedule</string>
    <string name="dialog_time_picker">Time</string>
    <string name="error_other_router_enabled">Error, only one router is allowed per store. There is other router enabled. Please check!</string>
    <string name="primary_router">My Primary router</string>
    <string name="slave_router">My backup router</string>
    <string name="retrieve_settings">Get settings from remote router.</string>
    <string name="backup_of">(Backup of # )</string>
    <string name="wait_for_config_data">Waiting for config data...</string>
    <string name="wait_for_connection">Waiting for new connection...</string>
    <string name="station_is_inactive">Station is not active...</string>
    <string name="waiting_for_connecting">Waiting for connecting...</string>
    <string name="pref_tracker_title">Table-tracker</string>
    <string name="pref_tracker_enabled">Table tracker enabled</string>
    <string name="pref_tracker_enabled_summary">Use table-tracker to get customer location</string>
    <string name="pref_tracker_number_from_userinfo">The table-tracker number is from \"UserInfo\" tag</string>
    <string name="pref_tracker_number_from_userinfo_summary">POS program can use \"UserInfo\" tag to pass table-tracker number to KDS</string>
    <string name="tt_connect_error">Can not connect to TT server.</string>
    <string name="restart_kds_as_language">A restart is needed in order to change language to #, do you want to change the language and restart now?</string>
    <string name="station_connected">Station [#] connected.</string>
    <string name="station_disconnected">Station [#] disconnected.</string>
    <string name="pos_connected">POS [#] connected.</string>
    <string name="receive_order">Get order #</string>
    <string name="receive_order_from_folder">Get order # from remote folder</string>
    <string name="receive_order_from_ip">Get order # from ip=$</string>
    <string name="select_order_status">Select [" # "] status.</string>
    <string name="select_item">Select item</string>
    <string name="backup_station_restored">My backup station # restored</string>
    <string name="primary_station_restored">My primary station # restored</string>
    <string name="station_restored">Station # restored</string>
    <string name="backup_router_lost">My backup router # lost</string>
    <string name="primary_router_lost">My primary router # lost</string>
    <string name="write_buffer_to">Write buffer data to </string>
    <string name="transfering_db_to_other_router">Transfering database to other router.</string>
    <string name="updating_db_from_other_router">Updating my database from other router.</string>
    <string name="get_order">Get order #</string>
    <string name="get_order_from_client_ip">Get order # from client ip=$</string>
    <string name="get_order_from_server_ip">Get order # from server ip=$</string>
    <string name="get_order_from_remote_folder">Get order # from remote folder</string>
    <string name="pref_kds_language">Language</string>
    <string-array name="pref_kds_language_titles">
        <item>English</item>
        <item>Chinese</item>
		<item>Español</item>
		<item>Português</item>
    </string-array>
    <string name="categories">Categories</string>
    <string name="items">Items</string>
    <string name="english" translatable="false">English</string>
    <string name="chinese" translatable="false">中文 (Chinese)</string>
    <string name="items_for_category">Items for category #</string>
    <string name="category_name">Category Name:</string>
    <string name="no_data">No data</string>
    <string name="export_csv">Export database to csv file</string>
    <string name="import_csv">Import csv file to database</string>
    <string name="file_name">File name:</string>
    <string name="export_db_done">Database has been exported to</string>
    <string name="import_csv_done">Imported file</string>
    <string name="auto_add_modifier">Add received modifier to database automatically</string>
    <string name="item_auto_add">Add received item to database automatically</string>
    <string name="log_mode">Log mode</string>
    <string name="log_reserved_days">Reserve log files for X days</string>
    <string name="log">Log</string>
    <string name="log_orders">Log received orders xml</string>
    <string name="station_lost">Station # lost</string>
    <string name="enable_order_ack">Enable order acknowledgement</string>
    <string name="use_smb_v2_open_folder">Use SMB v2 to open remote folder</string>
    <string name="keep_notification_minutes">Reserve notification files for X minutes</string>
    <string-array name="pref_kds_log_mode_titles">
        <item>None</item>
        <item>Basic</item>
        <item>Detail</item>
    </string-array>
    <string name="title_activity_activity_login">Sign in</string>
    <string name="logout">Logout</string>
    <string name="export">Export</string>
    <string name="str_import">Import</string>
	<string name="portuguese" translatable="false">Português</string>
</resources>